crates/nirvash-macros/tests/fixtures/attribute_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/fixtures/attribute_wrong_type.rs:39:4
   |
39 | fn wrong_state_type() -> StatePredicate<OtherState> {
   |    ^^^^^^^^^^^^^^^^ expected fn pointer, found fn item
   |
   = note: expected fn pointer `fn() -> StatePredicate<State>`
                 found fn item `fn() -> StatePredicate<OtherState> {wrong_state_type}`
